# rust-api-rest-rocket

./: README.md
database/: tp3_database.mwb.bak
server/: Cargo.toml  database.env
server/src/: lib.rs  main.rs
server/src/api/controllers/: ingredient_controller.rs  mealplan_controller.rs  mod.rs  recipe_controller.rs  routes.rs
server/src/business/dtos/: ingredient_dto.rs  mealplan_dto.rs  mod.rs  recipe_dto.rs
server/src/business/services/: ingredient_service.rs  mealplan_service.rs  mod.rs  recipe_service.rs
server/src/data_access/entities/: ingredients.rs  meal_plans.rs  mod.rs  recipe_ingredients.rs  recipe_meals.rs  recipes.rs
server/src/data_access/repository/: ingredient_repository.rs  mealplan_repository.rs  mod.rs  recipe_repository.rs  recipeingredients_repository.rs  recipemeal_repository.rs
