[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["secrets", "tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.15" }
dotenv = { version = "0.15" }
log = "0.4.20"
env_logger = "0.10.1"